- introduced blob + objectURL loading of images - configApp Event - mediator will now resolve an Response-Array with only one element

--- a/css/world.css
+++ b/css/world.css
@@ -12,8 +12,7 @@
 	background-color:rgba(10,10,10,1);
 }
 
-#world:before {
-	content:'';
+div.backgroundImage {
 	position:absolute;
 	top:0;
 	left:0;
